--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script defer src="js/app.min.js"></script>
-    <title>Главная</title>
+    <title>About</title>
 </head>
 
     <body>
@@ -114,31 +114,67 @@
 </header>
 
             <main class="content">
-                <div class="container">
-                    <ul style="text-align:center;">
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="main.html">Главная</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="item.html">Товар</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="contacts.html">Контакты</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="catalog.html">Каталог</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="faq.html">Faq</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="about.html">About</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="favourite.html">Избранное</a>
-                        </li>
-                    </ul>
-                </div>
+                <article class="about article">
+                    <div class="container">
+                        <header class="block-header">
+                            <h1>About us</h1>
+                            <p>Santa & Cole is a small, independent and global editor of design products, with its roots in Belloch (Barcelona, Spain). We have been editing since 1985, when the company was first founded. By editing we mean preparing a work for the public domain, we mean adapting an item for everyone’s use. What a book editor does with stories, we do with objects.</p>
+                        </header>
+                        <main class="about__row">
+                            <img src="img/about/1.jpg" alt="">
+                            <p>
+                                More than eighty creators have contributed to a rich catalogue of furniture and lighting products originating in very different contexts, by renowned designers such as Antoni Arola, Miguel Milá, André Ricard and llmari Tapiovaara.
+                                <br>
+                                <br>
+                                Acute and attentive to quality and detail, Santa & Cole outsources all of its industrial production to an extensive network of suppliers, mainly in Spain, but also in other countries such as Japan, where the washi paper for our Tekiò lamp is made.
+                                <br>
+                                <br>
+                                Our mission is to build, safeguard and disseminate knowledge through design objects. Objects whose quality is recognisable at the touch of a hand, and that enrich people’s lives, whether at home or in shared environments. Our philosophy is more modern than futurist and we are more intrigued by silence than by stridency.
+                                <br>
+                                <br>
+                                Our focus is not the present market, but the future one; not Barcelona, but the world; not fashion, but history.
+                            </p>
+                            <img src="img/about/1.jpg" alt="">
+                            <p>
+                                Santa & Cole was founded by Nina Masó, Javier Nieto Santa and Gabriel Ordeig Cole in 1985, during a decade of upheaval in Spain when anything seemed possible in the wake of the dictatorship.
+                                <br>
+                                <br>
+                                The early days, creating exceptional lamps for some of Barcelona’s most famous bars, soon led to commissions to light the homes of regular patrons of some of those venues. At a time when halogen lamps (cool to the touch, with a bluish light) were all the rage, Santa & Cole advocated the use of natural materials like wood, stitched cardboard or ribbons. In some cases, existing designs were revisited, and in others, new ones, such as the Básica lamp, were developed. We shifted the mood from technical and cold to human and warm.
+                            </p>
+                            <article class="gallery">
+                                <div class="gallery__row swiper">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <img src="img/products/1.jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/products/2.jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/products/3.jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/products/4.jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/products/1.jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/products/2.jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/products/3.jpg" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/products/4.jpg" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="swiper-pagintaion gallery-pagination"></div>
+                                </div>
+                            </article>
+                        </main>
+                    </div>
+                </article>
             </main>
             <footer class="footer">
     <div class="container">
