--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script defer src="js/app.min.js"></script>
-    <title>Главная</title>
+    <title>Faq</title>
 </head>
 
     <body>
@@ -114,31 +114,42 @@
 </header>
 
             <main class="content">
-                <div class="container">
-                    <ul style="text-align:center;">
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="main.html">Главная</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="item.html">Товар</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="contacts.html">Контакты</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="catalog.html">Каталог</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="faq.html">Faq</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="about.html">About</a>
-                        </li>
-                        <li>
-                            <a style="text-align: center; display: block; color:#2b2a28; font-size: 20px; margin-top: 20px;" href="favourite.html">Избранное</a>
-                        </li>
-                    </ul>
-                </div>
+                <article class="faq article">
+                    <div class="container">
+                        <header class="block-header">
+                            <h1>FAQs</h1>
+                            <p>This is a selection of our answers to the questions that we receive the most frequently on Santa & Cole. If you have another question, please do not hesitate to ask us by means of the Contact form.</p>
+                        </header>
+                        <main class="faq__row">
+                            <article class="faq__item">
+                                <header class="faq__header bordered">
+                                    Online purchase
+                                </header>
+                                <main class="faq__answers">
+                                    <h2>Can I track the status of my order?</h2>
+                                    <p>We will keep you informed via e-mail, sending you the link for the shipment tracking of the courier.</p>
+                                    <h2>How long will my order take to arrive?</h2>
+                                    <p>Delivery times depend on the shipping destination, you can find the different time details here.</p>
+                                    <h2>Can I cancel my order?</h2>
+                                    <p>Yes, you can cancel your order up to 12 hours after receiving the order confirmation by contacting us here.</p>
+                                </main>
+                            </article>
+                            <article class="faq__item">
+                                <header class="faq__header bordered">
+                                    Product Information
+                                </header>
+                                <main class="faq__answers">
+                                    <h2>Where can I obtain user instructions and maintenance guide for my product?</h2>
+                                    <p>You can find the product information on the product page of our website.</p>
+                                    <h2>Where can I purchase replacements and accessories?</h2>
+                                    <p>You can buy spare parts through our partners, visit the Where to buy page.</p>
+                                    <h2>Are the Santa & Cole products under guarantee?</h2>
+                                    <p>Certainly, all Santa & Cole products have a two-year guarantee.</p>
+                                </main>
+                            </article>
+                        </main>
+                    </div>
+                </article>
             </main>
             <footer class="footer">
     <div class="container">
