--- a/favourite.html
+++ b/favourite.html
@@ -11,7 +11,7 @@
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script defer src="js/app.min.js"></script>
-    <title>Контакты</title>
+    <title>Faq</title>
 </head>
 
     <body>
@@ -131,14 +131,12 @@
                     <div class="container">
                         <header class="block-header flex bordered">
                             <div>
-                                <h1>Batería</h1>
-                                <p>Lámparas portables de batería con energía autónoma recargable. Aptas para salir al exterior, ligeras y con una luz que se puede adecuar según su uso. Su calidad y versatilidad nos estimula a explorar todas sus utilidades.</p>
+                                <h1>Wishlist</h1>
                             </div>
-                            <a href="#" class="btn-filters filters-btn">Открыть фильтры</a>
                         </header>
                         <main class="products__row">
                             <a href="#" class="products__item">
-                                <svg>
+                                <svg class="active">
                                     <use xlink:href="#likeProduct"></use>
                                 </svg>
                                 <div class="products__img">
@@ -168,6 +166,9 @@
                                 </div>
                             </a>
                             <a href="#" class="products__item">
+                                <svg class="active">
+                                    <use xlink:href="#likeProduct"></use>
+                                </svg>
                                 <div class="products__img">
                                     <img src="img/index/lamp-3.png" alt="">
                                 </div>
@@ -180,6 +181,9 @@
                                 </div>
                             </a>
                             <a href="#" class="products__item">
+                                <svg class="active">
+                                    <use xlink:href="#likeProduct"></use>
+                                </svg>
                                 <div class="products__img">
                                     <img src="img/index/lamp-4.png" alt="">
                                 </div>
@@ -194,63 +198,6 @@
                         </main>
                     </div>
                 </article>
-                <aside class="filter dialogbox dialogbox-filters">
-                    <div class="dialogbox__close">
-                        <img src="img/svgicons/close.svg" alt="close">
-                    </div>
-                    <h2>Филтры</h2>
-                    <div class="slides-container">
-                        <div class="slide-show">
-                            Diseñadores
-                        </div>
-                        <div class="slide-hidden">
-                            <input type="text" placeholder="Text">
-                            <a href="#" class="slide__company">Jordi Garsec</a>
-                            <a href="#" class="slide__company">Jordi Garsec</a>
-                            <a href="#" class="slide__company">Jordi Garsec</a>
-                            <a href="#" class="slide__company">Jordi Garsec</a>
-                            <a href="#" class="slide__company">Jordi Garsec</a>
-                        </div>
-                        <div class="slide-show">
-                            Ordenar por
-                        </div>
-                        <div class="slide-hidden">
-                            <label class="checkbox">
-                                <input type="checkbox" class="custom-checkbox">
-                                <p>
-                                    Селект
-                                </p>
-                            </label>
-                            <label class="checkbox">
-                                <input type="checkbox" class="custom-checkbox">
-                                <p>
-                                    Селект
-                                </p>
-                            </label>
-                        </div>
-                    </div>
-                    <footer class="filter__filters">
-                        <p>Filters</p>
-                        <div class="filter__current">
-                            <div>
-                                Example
-                                <button class="filter__close"></button>
-                            </div>
-                            <div>
-                                Example
-                                <button class="filter__close"></button>
-                            </div>
-                            <div>
-                                Example
-                                <button class="filter__close"></button>
-                            </div>
-                            <div>
-                                Example
-                                <button class="filter__close"></button>
-                            </div>
-                        </div>
-                    </footer>
-                </aside>
             </main>
             <footer class="footer">
     <div class="container">
