--- a/main.html
+++ b/main.html
@@ -150,6 +150,64 @@
                         <div class="swiper-button-next intro-next"></div>
                     </div>
                 </section>
+                <article class="products article">
+                    <div class="container">
+                        <header class="block-header flex ">
+                            <h2>Товары в налиии</h2>
+                            <a href="#">Смотреть все</a>
+                        </header>
+                        <div class="products__row">
+                            <a href="#" class="products__item">
+                                <div class="products__img">
+                                    <img src="img/index/lamp-1.png" alt="">
+                                </div>
+                                <div class="products__info">
+                                    <div class="products__name">
+                                        <h3>Cestita Batería</h3>
+                                        <p>Miguel Milá</p>
+                                    </div>
+                                    <p>Table lamps</p>
+                                </div>
+                            </a>
+                            <a href="#" class="products__item">
+                                <div class="products__img">
+                                    <img src="img/index/lamp-2.png" alt="">
+                                </div>
+                                <div class="products__info">
+                                    <div class="products__name">
+                                        <h3>Cestita Batería</h3>
+                                        <p>Miguel Milá</p>
+                                    </div>
+                                    <p>Table lamps</p>
+                                </div>
+                            </a>
+                            <a href="#" class="products__item">
+                                <div class="products__img">
+                                    <img src="img/index/lamp-3.png" alt="">
+                                </div>
+                                <div class="products__info">
+                                    <div class="products__name">
+                                        <h3>Cestita Batería</h3>
+                                        <p>Miguel Milá</p>
+                                    </div>
+                                    <p>Table lamps</p>
+                                </div>
+                            </a>
+                            <a href="#" class="products__item">
+                                <div class="products__img">
+                                    <img src="img/index/lamp-4.png" alt="">
+                                </div>
+                                <div class="products__info">
+                                    <div class="products__name">
+                                        <h3>Cestita Batería</h3>
+                                        <p>Miguel Milá</p>
+                                    </div>
+                                    <p>Table lamps</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </article>
                 <section class="block-half section">
                     <div class="container">
                         <div class="block-half__row">
@@ -228,6 +286,27 @@
                         </div>
                     </div>
                 </article>
+                <section class="block-half section">
+                    <div class="container">
+                        <div class="block-half__row reverse">
+                            <div class="block-half__text">
+                                <header class="block-header">
+                                    <h3>Servicios</h3>
+                                    <h2>
+                                        Nuestro equipo trabaja contigo para asegurar la atmósfera adecuada para tu proyecto
+                                    </h2>
+                                </header>
+                                <p>
+                                    Juntos, domesticamos la luz en las escenas cotidianas para crear ambientes y sensaciones, de noche y de día.
+                                </p>
+                                <a href="#">ASESORÍA DE ILUMINACIÓN</a>
+                            </div>
+                            <div class="block-half__image">
+                                <img src="img/index/lamps.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
             <footer class="footer">
     <div class="container">
