--- a/item.html
+++ b/item.html
@@ -114,19 +114,8 @@
 </header>
 
             <main class="content">
-                <article class="products article products__big">
+                <!-- <article class="products article products__big">
                     <div class="container">
-                        <header class="block-header flex bordered">
-                            <div>
-                                <h1>Americana</h1>
-                                <p>
-                                    Miguel Mila
-                                    <br>
-                                    1964
-                                </p>
-                            </div>
-                            <a href="#" class="btn-filters filters-btn">Открыть фильтры</a>
-                        </header>
                         <div class="products__row">
                             <a href="#" class="products__item">
                                 <div class="products__img">
@@ -178,9 +167,20 @@
                             </a>
                         </div>
                     </div>
-                </article>
+                </article> -->
                 <article class="gallery article">
                     <div class="container">
+                        <header class="block-header flex bordered">
+                            <div>
+                                <h1>Americana</h1>
+                                <p>
+                                    Miguel Mila
+                                    <br>
+                                    1964
+                                </p>
+                            </div>
+                            <a href="#" class="btn-filters filters-btn">Открыть фильтры</a>
+                        </header>
                         <div class="gallery__row swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
@@ -238,7 +238,24 @@
                                 </footer>
                             </div>
                             <div class="block-half__image">
-                                <img src="img/index/lamps.png" alt="">
+                                <div class="swiper">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <img src="img/index/lamps.png" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/index/lamps.png" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/index/lamps.png" alt="">
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="img/index/lamps.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-button-prev block-half__prev"></div>
+                                <div class="swiper-button-next block-half__next"></div>
                             </div>
                         </div>
                     </div>
@@ -444,7 +461,6 @@
                                 Diseñadores
                             </div>
                             <div class="slide-hidden">
-                                <input type="text" placeholder="Text">
                                 <a href="#" class="slide__company">Jordi Garsec</a>
                                 <a href="#" class="slide__company">Jordi Garsec</a>
                                 <a href="#" class="slide__company">Jordi Garsec</a>
